externalsvcs/resources/direct-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: direct-app
spec:
  selector:
    app: direct
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: NodePort
