externalsvcs/resources/indirect-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: indirect-app
spec:
  selector:
    app: indirect
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: NodePort
