externalsvcs/resources/origin-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: origin-app
spec:
  selector:
    app: origin
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: NodePort
---
